--- a/src/index.css
+++ b/src/index.css
@@ -710,6 +710,22 @@
         margin: 0;
     }
 
+    .typing-indicator-container {
+    position: absolute;
+    left: 50%;
+    top: 35px;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 20px;
+    z-index: 10;
+    }
+      
+    .typing-gif {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
     .messages {
         margin-left: 0;
         margin-right: 0;
