--- a/src/index.css
+++ b/src/index.css
@@ -726,6 +726,17 @@
         object-fit: contain;
     }
 
+    .online-status-dot {
+    position: absolute;
+    bottom: 33px;
+    right: 2px;
+    width: 12px;
+    height: 12px;
+    background-color: #22c55e;
+    border-radius: 50%;
+    border: 2px solid #1A1A2E;
+    }
+
     .messages {
         margin-left: 0;
         margin-right: 0;
